// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SidebarCell snapshot active 1`] = `
<div
  aria-label="Account Executive"
  class="flex flex-col justify-start content-start px-6 py-4 border-b border-slate-200 hover:bg-slate-300 rounded cursor-pointer component"
  data-test="SidebarCell"
  role="menuitem"
  tabindex="0"
>
  <div
    class="text-sm active max-w-full"
  >
    <div
      class="truncate"
    >
      Account Executive
    </div>
  </div>
  <div
    class="text-xs text-dark-aa"
  >
    <div>
      California, Utah, Colorado, Remote
    </div>
  </div>
</div>
`;

exports[`SidebarCell snapshot data-attribute 1`] = `
<div
  aria-label="Account Executive"
  class="flex flex-col justify-start content-start px-6 py-4 border-b border-slate-200 hover:bg-slate-300 rounded cursor-pointer component"
  data-id="123"
  data-test="SidebarCell"
  role="menuitem"
  tabindex="0"
>
  <div
    class="text-sm active max-w-full"
  >
    <div
      class="truncate"
    >
      Account Executive
    </div>
  </div>
  <div
    class="text-xs text-dark-aa"
  >
    <div>
      California, Utah, Colorado, Remote
    </div>
  </div>
</div>
`;

exports[`SidebarCell snapshot starred 1`] = `
<div
  aria-label="Account Executive"
  class="flex flex-col justify-start content-start px-6 py-4 border-b border-slate-200 hover:bg-slate-300 rounded cursor-pointer component"
  data-test="SidebarCell"
  role="menuitem"
  tabindex="0"
>
  <div
    class="text-sm active max-w-full"
  >
    <div
      class="truncate"
    >
      Account Executive
    </div>
  </div>
  <div
    class="text-xs text-dark-aa"
  >
    <div>
      California, Utah, Colorado, Remote
    </div>
  </div>
</div>
`;
